--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "rxjs": "^5.4.2",
         "zone.js": "^0.8.14",
         "express": "^4.10.6",
-        "twit": "^2.2.9"
+        "twit": "^2.2.9",
+        "mysql": "^2.10.2"
     },
     "devDependencies": {
         "@angular/cli": "1.4.4",
